styles/base/_theme.scss
// Store available photo themes in a map, where the key is the ID of the photo
// theme, and the value is an accent color used for things like buttons,
// controls, etc.
$theme-photos: (
  'word': $blue,
  'worship': $orange,
  'pasture': $green,
  'mountain': $slate,
  'shore': $teal,
  'stars': $royal,
  'forest': $forest
);

// Dynamically define CSS variables / custom properties using Sass variable
// interpolation
@each $theme-name, $theme-color in join($theme-colors, $theme-photos) {
  .theme-#{$theme-name} {
    --current-theme-color: #{$theme-color};
    --current-theme-color-dark: #{darken($theme-color, 10%)};
  }
}
@each $theme-name, $theme-color in $theme-photos {
  .theme-#{$theme-name} {
    --current-theme-photo-url: url('../../public/images/background-photos/#{$theme-name}.jpg');
  }
}

// Set <body> background as solid color for color themes
.color-theme {
  background-color: var(--current-theme-color);
}
// Since iOS does not support background-attachment:fixed, we must add a
// pseudo-element on the <body> and add the background-image to that
.photo-theme:before {
  content: '';
  position: fixed;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  background-color: $grey;
  background-image: var(--current-theme-photo-url);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
}

// Theme-specific adjustments
.theme-mountain {
  background-position: center center;
}
.theme-forest .app-header-title {
  mix-blend-mode: normal;
  color: $dark-30;
}

